--- a/ResumeManagement.Server/ResumeManagement.Server.csproj
+++ b/ResumeManagement.Server/ResumeManagement.Server.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Dtos\Candidate\" />
+    <Folder Include="documents\pdfs\" />
   </ItemGroup>
 
 </Project>
