--- a/resumemanagement.client/package.json
+++ b/resumemanagement.client/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^6.18.3",
     "axios": "^1.6.2",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
