--- a/ResumeManagement.Server/appsettings.json
+++ b/ResumeManagement.Server/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "local": "Server=localhost;Database=ResumeManagementDRTS;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:7235"
+      }
+    }
   }
 }
